--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <title>Jessica Buckwalter Resume</title>
   <body>
-    <div>
+    <div class="header">
       <h1 class="name">Jessica Buckwalter</h1>
-      <p class="contact-info">(321) 662-5018 ➼ jessica.a.buckwalter@gmail.com</p>
+      <h5 class="contact-info">(321) 662-5018 ➼ jessica.a.buckwalter@gmail.com</h5>
     </div>
     
     <div class="about-me">
@@ -58,5 +58,8 @@
             years.</li>
       </ul>
     </div>
+    <div>
+      
+    </<div>
   </body>
 </html>
