--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <title>Jessica Buckwalter Resume</title>
   <body>
+    <div class="body-card">
     <div class="header">
       <h1 class="name">Jessica Buckwalter</h1>
       <h4 class="contact-info">(321) 662-5018  ➼ jessica.a.buckwalter@gmail.com</h4>
@@ -76,6 +77,7 @@
           and planned group functions as president and record manager of the local chapter for over 3
             years.</li>
       </ul>
+    </div>
     </div>
     <div>
       
