--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     
     <div class="about-me">
       <img class="picture" src="https://raw.githubusercontent.com/Hopper2021/hopper2021.github.io/main/finalpropic.jpg" alt="professional portrait"/>
-      <p>"I didn't realize what I wanted to be when I grew up until my late 20s and in
-        the middle of my 7 year career as an activy duty sailor. I wanted to learn a skill
-        that was technologically based but also quenched my yearning to be creative and artistic.
-        Learning about coding basics, agile, google fu, and applying it to my everyday life makes 
-        me wonder what I ever did without it. I'm done with dreaming and ready to start doing, 
-        and another bootcamp sounds right up my alley."
+      <p>"I didn't realize what I wanted to be when I grew up until my late 20's and in
+        the middle of my 7 year career as an active duty sailor. I wanted to learn a skill
+        that was technologically based but also quenched my yearning to be creative and artistic,
+        and programming really hit the sweet spot for me. Learning about coding basics, agile, 
+        google fu, and applying it to my everyday life makes me wonder what I ever did without 
+        it. I'm done with dreaming and ready to start doing, and another bootcamp sounds right up my alley."
       </p>
     </div>
     
@@ -41,9 +41,8 @@
      <h4>SAP Functional Analyst - Accenture Federal Services (May 2021 - Present)</h4>
        <ul>
         <li>Served as a reporting and metrics analyst on the value realization team. Regularly
-         met with clients as head architect of Visio products and professionally handled
-         client meetings to answer any quesions and concerns on said products to better 
-          serve their needs.</li>
+         met with clients as an architect of Visio and Power BI products and professionally handled
+         client meetings to answer any quesions and concerns to better serve their needs.</li>
        </ul>
      <h4>Salesforce Administrator Intern - Accenture Federal Services (Jan 2021 - April 2021)</h4>
        <ul>
